# api_rest_menu

./: .env  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: alembic.ini  env.py
alembic/versions/: 434b841c8e0c_clear_database_02.py  45caaaff8425_clear_database_03.py  c041b4e06ef6_clear_database.py  dc9fa880f533_add_ololo_to_menu.py  e20c8be2aed0_initial_migration.py  f0eacbc3e47a_clear_base_05.py  f27ea78dbdae_clear_database_04.py  f493da1afd90_deleye_ololo_from_menus.py
app/: database.py  main.py  models.py  routers.py  schemas.py  settings.py  views.py
