[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Marina Finik <mfinik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.68.0"
sqlalchemy = "^1.4.23"
uvicorn = "^0.23.1"
alembic = "^1.6.7"
psycopg2-binary = "^2.9.7"
python-decouple = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
pylint = "^2.17.5"
black = "^23.7.0"
isort = "^5.12.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"